--- a/dscwebsite/_config.yml
+++ b/dscwebsite/_config.yml
@@ -19,11 +19,10 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Furman Data Science Club
-email: shrepr2@furman.edu
+email: shrepr2@furman.edu patedi2@furman.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Your one stop resource for everything Data Science at Furman: Project sponserships, Inspiration, Competitions. 
+  Email us for any query.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
